--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Snake est un jeu developper par Conoracre et Tarkok
+Snake est un jeu developpé par Conoracre et Tarkok
 dans le cadre du projet du module B23 à Télécom Lille
 
 v1.0 => sources d'un programme console non aboutit
